--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/uuid": "^10.0.0",
+    "framer-motion": "^11.5.4",
     "geist": "^1.3.0",
+    "lucide-react": "^0.441.0",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-scrollbar": "^3.1.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
